--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -91,6 +91,7 @@ tray-position = right
 tray-padding = 1
 tray-maxsize = 16
 tray-scale = 1.0
+tray-foreground = ${colors.foreground}
 
 ; 设置polybar上指针形状
 ; 可能的值为：
