--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,4 @@
-################################
+#################################
 #             Shadows           #
 #################################
 
@@ -8,34 +8,48 @@ shadow-opacity = 0.25;
 shadow-offset-x = -25;
 shadow-offset-y = -25;
 shadow-exclude = [
-  "_GTK_FRAME_EXTENTS@:c"
+  # 不给GTK+3 应用绘制阴影
+  "_GTK_FRAME_EXTENTS@:c",
+  # tab窗口
+  "_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
 ];
 
 #################################
-#           Fading              #
+#        Fading 淡入/淡出         #
 #################################
 
 fading = true;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
+# 时间
 fade-delta = 7;
 
 #################################
 #   Transparency / Opacity      #
 #################################
-
-inactive-opacity = 0.8;
-frame-opacity = 0.9;
+# 不活动窗口不透明度
+inactive-opacity = 1;
+# 窗口，标题栏不透明度
+frame-opacity = 1;
 inactive-opacity-override = false;
+
+  # 自带标签的应用避免看到底层标签窗口的内容
+  #"85:class_g = 'Alacritty' && !_NET_WM_STATE@:32a",
+  #"0:_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
 opacity-rule = [
   "90:class_g = 'Rofi'",
-  "90:class_g = 'Ibus-ui-gtk3'"
+  "80:class_g = 'Alacritty' && focused",
+  "60:class_g = 'Alacritty' && !focused",
+  "100:class_g = 'fcitx'",
+  "100:class_g = 'firefox'"
+
 ];
 
 #################################
 #     Background-Blurring       #
 #################################
-
+# 需要实验性后端
+# 模糊类型，none：关闭，gaussian：高斯，box：框架，kernel/dual_kernel
 blur-method = "box";
 blur-size = 25;
 
@@ -49,13 +63,18 @@ blur-background-exclude = [
 #################################
 #       General Settings        #
 #################################
-
-backend = "glx";
-vsync = true;
+# 渲染后端，默认xrender,可选glx
+backend = "xrender";
+# 垂直同步，虚拟机需要关闭
+vsync = false;
+# 检测WM窗口，并标记为活动的
 mark-wmwin-focused = true;
 mark-ovredir-focused = false;
+# 检测带有圆角的窗口，并设置为非异性窗口
 detect-rounded-corners = true;
+# 检测窗口上的 _NET_WM_OPACITY
 detect-client-opacity = true;
+# 刷新率。默认0
 refresh-rate = 0
 detect-transient = true
 detect-client-leader = true
