--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,6 +1,7 @@
 [colors]
 background = #212B30
-foreground = #C4C7C5
+; foreground = #C4C7C5
+foreground = #FFFFFC
 sep = #3F5360
 
 white = #FFFFFF
