--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -20,7 +20,7 @@ format-prefix-foreground = ${colors.yellow}
 ;   %percentage-sum% - Cumulative load on all cores
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = " %percentage%%"
+label = " %percentage:3%%"
 
 ; Spacing between individual per-core ramps
 ;;ramp-coreload-spacing = 1
