--- a/.config/polybar/modules/keyboard.ini
+++ b/.config/polybar/modules/keyboard.ini
@@ -9,7 +9,7 @@ blacklist-1 = scroll lock
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
 format = <label-layout> <label-indicator>
-format-prefix = 
+;format-prefix = 
 
 ; Available tokens:
 ;   %layout%
@@ -18,7 +18,7 @@ format-prefix = 
 ;   %icon%
 ;   %variant% (unreleased)
 ; Default: %layout%
-label-layout = " %icon%"
+label-layout = "  %icon%"
 ; layout-icon-[0-9]+ = layout;icon
 layout-icon-default = some-icon
 layout-icon-0 = ch;C
