--- a/.config/fcitx5/conf/pinyin.conf
+++ b/.config/fcitx5/conf/pinyin.conf
@@ -17,7 +17,7 @@ PreeditInApplication=False
 # 固定嵌入预编辑文本光标在预编辑的开头
 PreeditCursorPositionAtBeginning=False
 # 在预编辑中显示完整拼音
-PinyinInPreedit=True
+PinyinInPreedit=False
 # 启用预测
 Prediction=False
 # 预测个数
