更新polybar注销配置

--- a/.config/polybar/modules/powermenu.ini
+++ b/.config/polybar/modules/powermenu.ini
@@ -22,6 +22,6 @@ menu-0-1-exec = systemctl reboot
 
 menu-0-2 = 注销
 menu-0-2-underline = ${colors.purple}
-menu-0-2-exec = pkill -kill -u fe
+menu-0-2-exec = pkill -kill -u yaojia
 
 
