--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -31,7 +31,7 @@ fade-delta = 7;
 inactive-opacity = 1;
 # 窗口，标题栏不透明度
 frame-opacity = 1;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 
   # 自带标签的应用避免看到底层标签窗口的内容
   #"85:class_g = 'Alacritty' && !_NET_WM_STATE@:32a",
