--- a/.config/i3/config
+++ b/.config/i3/config
@@ -181,6 +181,7 @@ for_window [title="Fcitx 配置"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="feh"] floating enable
 for_window [class="Arandr"] floating enable
+for_window [class="qt5ct"] floating enable
 
 
 
