--- a/.config/fcitx5/conf/classicui.conf
+++ b/.config/fcitx5/conf/classicui.conf
@@ -9,7 +9,7 @@ Font="等距更纱黑体 SC 12"
 # 菜单字体
 MenuFont="更纱黑体 Mono SC Nerd 10"
 # 使用输入法的语言来显示文字
-UseInputMethodLangaugeToDisplayText=False
+UseInputMethodLangaugeToDisplayText=True
 # 主题
-Theme=Material-Color-Blue
+Theme=Arc
 
