--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,41 +1,52 @@
 #################################
-#             Shadows           #
+#
+#             Shadows / 阴影          
+#
 #################################
 
 shadow = true;
-shadow-radius = 25;
+shadow-radius = 10;
 shadow-opacity = 0.25;
-shadow-offset-x = -25;
-shadow-offset-y = -25;
+shadow-offset-x = -8;
+shadow-offset-y = -8;
 shadow-exclude = [
   # 不给GTK+3 应用绘制阴影
   "_GTK_FRAME_EXTENTS@:c",
   # tab窗口
-  "_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",  
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "class_g = 'firefox' && argb",
 ];
+shadow-ignore-shaped = false;
 
 #################################
-#        Fading 淡入/淡出         #
+#
+#        Fading 淡入/淡出         
+#
 #################################
 
 fading = true;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 # 时间
-fade-delta = 7;
+fade-delta = 4;
 
 #################################
-#   Transparency / Opacity      #
+#
+#        Opacity / 透明
+#   
 #################################
 # 不活动窗口不透明度
-inactive-opacity = 1;
+#inactive-opacity = 1;
 # 窗口，标题栏不透明度
-frame-opacity = 1;
-inactive-opacity-override = true;
+#frame-opacity = 1;
+#inactive-opacity-override = true;
 
-  # 自带标签的应用避免看到底层标签窗口的内容
-  #"85:class_g = 'Alacritty' && !_NET_WM_STATE@:32a",
-  #"0:_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
+# 自带标签的应用避免看到底层标签窗口的内容
+#"85:class_g = 'Alacritty' && !_NET_WM_STATE@:32a",
+#"0:_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
 opacity-rule = [
   "90:class_g = 'Rofi'",
   "80:class_g = 'Alacritty' && focused",
@@ -50,15 +61,15 @@ opacity-rule = [
 #################################
 # 需要实验性后端
 # 模糊类型，none：关闭，gaussian：高斯，box：框架，kernel/dual_kernel
-blur-method = "box";
-blur-size = 25;
+#blur-method = "box";
+#blur-size = 25;
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Polybar'"
-];
+#blur-background-exclude = [
+#  "_GTK_FRAME_EXTENTS@:c",
+#  "class_g = 'Polybar'"
+#];
 
 #################################
 #       General Settings        #
@@ -69,7 +80,7 @@ backend = "xrender";
 vsync = false;
 # 检测WM窗口，并标记为活动的
 mark-wmwin-focused = true;
-mark-ovredir-focused = false;
+mark-ovredir-focused = true;
 # 检测带有圆角的窗口，并设置为非异性窗口
 detect-rounded-corners = true;
 # 检测窗口上的 _NET_WM_OPACITY
@@ -82,9 +93,33 @@ use-damage = true
 log-level = "warn";
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  tooltip = 
+  { 
+    fade = true; 
+    shadow = false; 
+    focus = true; 
+  };
+
+  dock = 
+  { 
+    shadow = false; 
+  };
+
+  dnd = 
+  { 
+    shadow = false; 
+  };
+
+  popup_menu = 
+  { 
+    shadow = false;
+    fade = false;
+    focus = true; 
+  };
+
+  dropdown_menu = 
+  { 
+    shadow = false;
+    opacity = 0.8; 
+  };
 };
