--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,7 +16,7 @@ include-directory = $HOME/.config/polybar/modules
 
 [bar/main]
 width = 100%
-height = 30
+height = 40
 
 offset-x = 0%
 offset-y = 0%
@@ -75,9 +75,9 @@ foreground = ${colors.foreground}
 ; 字体设置
 include-file = $HOME/.config/polybar/fonts.ini
 ; 模块位置定义
-modules-left = launcher sep i3 sep title
+modules-left = powermenu sep i3 sep title
 modules-center = date
-modules-right = cpu memory filesystem battery wired pulseaudio xbacklight keyboard sep powermenu sep
+modules-right = cpu memory filesystem battery wired pulseaudio xbacklight keyboard sep 
 
 ; 本地化
 locale = zh_CN.UTF-8
