--- a/.config/polybar/modules/title.ini
+++ b/.config/polybar/modules/title.ini
@@ -2,9 +2,9 @@
 type = internal/xwindow
 
 format = <label>
-format-prefix = 
+format-prefix = 
 format-padding = 1
-format-font = 4
+;format-font = 4
 format-foreground = ${colors.foreground}
 
 label = "  %title%"
