--- a/.config/fcitx5/conf/pinyin.conf
+++ b/.config/fcitx5/conf/pinyin.conf
@@ -1,5 +1,7 @@
 # 双拼方案
 ShuangpinProfile=Ziranma
+# 显示当前双拼模式
+ShowShuangpinMode=True
 # 页大小
 PageSize=5
 # 启用拼写检查
@@ -31,7 +33,7 @@ Number of sentence=2
 # 输入长于...时提示长词 (设置为 0 时禁用)
 LongWordLengthLimit=4
 # 快速输入的触发键
-QuickPhraseKey=semicolon
+QuickPhraseKey=
 # 使用 V 来触发快速输入
 VAsQuickphrase=True
 # FirstRun
