--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -14,7 +14,7 @@ time = "  %I:%M %p"
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time-alt = "  %a, %d %b %Y"
+time-alt = "  %Y %b %d"
 
 ; Available tags:
 ;   <label> (default)
