--- a/.config/polybar/modules/powermenu.ini
+++ b/.config/polybar/modules/powermenu.ini
@@ -1,26 +1,26 @@
 [module/powermenu]
 type = custom/menu
-expand-right = false
+expand-right = true
 
 format-spacing = 1
 
-label-open = ""
-label-open-foreground = ${colors.pink}
-label-close = ""
+label-open = "  "
+label-open-foreground = ${colors.blue}
+label-close = " "
 label-close-foreground = ${colors.red}
-label-separator = " "
-;label-separator-foreground = ${colors.foreground-alt}
+label-separator = "  "
+;label-separator-foreground = ${colors.sep}
 
 
-menu-0-0 = 关机
+menu-0-0 = "   "
 menu-0-0-underline = ${colors.pink}
 menu-0-0-exec = systemctl poweroff
 
-menu-0-1 = 重启
+menu-0-1 = "   "
 menu-0-1-underline = ${colors.yellow}
 menu-0-1-exec = systemctl reboot
 
-menu-0-2 = 注销
+menu-0-2 = "   "
 menu-0-2-underline = ${colors.purple}
 menu-0-2-exec = pkill -kill -u yaojia
 
