--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -2,7 +2,8 @@
 background = #212B30
 ; foreground = #C4C7C5
 foreground = #FFFFFC
-sep = #3F5360
+sep = #C4C7C5
+transparent = #00
 
 white = #FFFFFF
 black = #000000
