--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -41,18 +41,20 @@ line-size = 3
 ; border-{left,top,right,bottom}-size/color
 ; 高度 + 边框顶部尺寸 + 边框底部尺寸
 ; 宽度 - 右边框尺寸 - 左边框尺寸 
-border-bottom-size = 0
-border-bottom-color = ${colors.foreground}
+border-top-size = 10
+border-left-size = 10
+border-right-size = 10
+border-bottom-color = ${colors.transparent}
 
 ; 状态栏左侧和右侧添加间距（空格数）
 ;   padding-{left,right}
 padding-left = 2
-padding-right = 1
+padding-right = 2
 
 ; 每个模块前后的间距（空格数）
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 2
+module-margin-right = 2
 
 ; 每个模块之间的分隔符
 separator =
@@ -62,8 +64,6 @@ separator =
 ; 是否覆盖
 override-redirect = false
 
-scroll-up = next
-scroll-down = prev
 
 ; 启用每个进程间的消息传递
 enable-ipc = true
@@ -89,11 +89,12 @@ locale = zh_CN.UTF-8
 ;   none
 tray-position = right
 tray-padding = 1
-tray-maxsize = 16
+tray-maxsize = 18
 tray-scale = 1.0
 tray-foreground = ${colors.foreground}
+tray-detached = false
 
-; 设置polybar上指针形状
+; 设置polybar上可点击指针形状
 ; 可能的值为：
 ; - default : 和之前一样的默认指针，也可以是空字符串（默认）
 ; - pointer ：通常呈手形
