--- a/.config/polybar/modules/filesystem.ini
+++ b/.config/polybar/modules/filesystem.ini
@@ -25,7 +25,7 @@ fixed-values = true
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
 format-mounted-prefix = 
-format-mounted-prefix-foreground = ${colors.orange}
+;format-mounted-prefix-foreground = ${colors.orange}
 
 ; Available tags:
 ;   <label-unmounted> (default)
