--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -17,7 +17,7 @@ interval = 1
 ;   <ramp-swap-free>
 format = <label>
 format-prefix = 
-format-prefix-foreground = ${colors.blue}
+;format-prefix-foreground = ${colors.blue}
 
 ; Available tokens:
 ;   %percentage_used% (default)
