--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,6 +2,12 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
 
+<!-- 字体缩放 -->
+    <match target="pattern">
+        <edit name="dpi" mode="assign">
+            <double>120</double>
+        </edit>
+    </match>
 
 <!-- 关闭内嵌点阵字体 -->
 
