--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -1,9 +1,9 @@
 ;T1 文本字体
-font-0 = "Sarasa UI SC:size=13;3"
+font-0 = "Sarasa UI SC:style=Bold:size=12;3"
 ;T2 图标字体
 ;font-1 = "Sarasa Mono SC Nerd:style=Bold:size=14;3"
 font-1 = "Iosevka Nerd Font:size=16;3"
-font-2 = "Material Icon:size=14;3"
+font-2 = "Material Icon:size=16;3"
 
 
 
