--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -13,7 +13,7 @@ interval = 1
 ;;format = <label> <ramp-coreload>
 format = <label>
 format-prefix = ﬙
-format-prefix-foreground = ${colors.yellow}
+;format-prefix-foreground = ${colors.yellow}
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
