--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -13,22 +13,28 @@ window:
   # 动态填充
   dynamic_padding: true
 
-  # 窗口装饰
-  #  - full: Borders and title bar
-  #  - none: Neither borders nor title bar
+  # 窗口
+  #  - full: 面板和标题栏都显示
+  #  - none: 不显示标题栏
   decorations: full
   
   # 背景不透明度
-  opacity: 0.25
+  opacity: 0.8
 
   # 窗口标题
   title: Alacritty
+
+  # 终端应用可以改变标题
+  dynamic_title: true
 
   # GTK 主题变化 (Linux/BSD only)
   # - None （default）使用默认的主题色
   # - light 明亮主题
   # - dark  黑暗主题
   gtk_theme_variant: None
+
+# 窗口透明
+background_opacity: 0.8
 
 #scrolling:
   # 缓冲区刻划动的行数，设置为 0 时禁用缓冲区
@@ -93,6 +99,9 @@ key_bindings:
   - { key: Home, chars: "\x1b[H", mode: ~AppCursor  }
   - { key: End, chars: "\x1bOF", mode: AppCursor   }
   - { key: End,  chars: "\x1b[F", mode: ~AppCursor  }
+
+# If `true`, bold text is drawn using the bright color variants.
+draw_bold_text_with_bright_colors: true
 
 #主题
 # Colors (Dracula)
