--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -49,10 +49,10 @@ fade-delta = 4;
 #"0:_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
 opacity-rule = [
   "90:class_g = 'Rofi'",
-  "80:class_g = 'Alacritty' && focused",
-  "55:class_g = 'Alacritty' && !focused",
+  #"80:class_g = 'Alacritty' && focused",
+  "65:class_g = 'Alacritty' && !focused",
   "100:class_g = 'fcitx'",
-  "100:class_g = 'firefox'"
+  "100:class_g = 'firefox'",
 
 ];
 
