--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,7 +5,7 @@ set $mod Mod4
 set $alt Mod1
 set $ctrl Control
 # 字体
-font pango:Sarasa Gothic SC 12
+font pango:Sarasa UI SC 12
 # 重载配置文件
 bindsym $mod+Shift+c reload
 # 重启 i3
@@ -52,27 +52,27 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec --no-startup-id rofi -show drun
 
 # 改变焦点窗口 (semicolon: ';')
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # 移动焦点窗口
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # 水平分割窗口
-bindsym $mod+h split h
+bindsym $mod+b split h
 # 垂直分割窗口
 bindsym $mod+v split v
 
@@ -179,7 +179,7 @@ exec_always --no-startup-id dunst
 
 
 ################################## 窗口配置 START ################################
-for_window [title="Fcitx 配置"] floating enable
+for_window [class="fcitx5-config-qt"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="feh"] floating enable
 for_window [class="Arandr"] floating enable
