--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -48,7 +48,7 @@ fade-delta = 4;
 #"85:class_g = 'Alacritty' && !_NET_WM_STATE@:32a",
 #"0:_NET_WM_STATE@:32a *= '_NET_WM_HIDDEN'"
 opacity-rule = [
-  "90:class_g = 'Rofi'",
+  #"90:class_g = 'Rofi'",
   #"80:class_g = 'Alacritty' && focused",
   "65:class_g = 'Alacritty' && !focused",
   "100:class_g = 'fcitx'",
