--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -34,7 +34,7 @@ radius-bottom = 0.0
 ; 下划线像素大小和颜色
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 3
+line-size = 4
 ;line-color = ${colors.background}
 
 ; 状态栏四周边框
@@ -77,7 +77,7 @@ include-file = $HOME/.config/polybar/fonts.ini
 ; 模块位置定义
 modules-left = powermenu sep i3 sep title
 modules-center = date
-modules-right = cpu memory filesystem battery wired pulseaudio xbacklight keyboard sep 
+modules-right = cpu memory filesystem battery wired pulseaudio xbacklight keyboard sep dunst
 
 ; 本地化
 locale = zh_CN.UTF-8
@@ -91,7 +91,8 @@ tray-position = right
 tray-padding = 1
 tray-maxsize = 18
 tray-scale = 1.0
-tray-foreground = ${colors.foreground}
+tray-background = ${colors.white}
+;tray-foreground = ${colors.foreground}
 tray-detached = false
 
 ; 设置polybar上可点击指针形状
