--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -12,7 +12,7 @@ interval = 1
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = ﬙
+format-prefix = 
 ;format-prefix-foreground = ${colors.yellow}
 
 ; Available tokens:
