--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -50,7 +50,7 @@ fade-delta = 4;
 opacity-rule = [
   #"90:class_g = 'Rofi'",
   #"80:class_g = 'Alacritty' && focused",
-  "65:class_g = 'Alacritty' && !focused",
+  #"65:class_g = 'Alacritty' && !focused",
   "100:class_g = 'fcitx'",
   "100:class_g = 'firefox'",
 
