--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -16,7 +16,7 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = 
 ;format-prefix-foreground = ${colors.blue}
 
 ; Available tokens:
