before change to bspwm

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -191,7 +191,7 @@ exec_always --no-startup-id picom
 # polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 # fcitx5
-exec_always --no-startup-id fcitx5 -d
+exec--no-startup-id fcitx5 -d
 # 网络管理GUI
 exec --no-startup-id nm-applet
 
@@ -201,6 +201,8 @@ exec_always --no-startup-id dunst
 
 
 ################################## 窗口配置 START ################################
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
 for_window [class="fcitx5-config-qt"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="feh"] floating enable
