--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -59,7 +59,7 @@ module-margin-right = 2
 ; 每个模块之间的分隔符
 separator =
 
-;wm-restack = bspwm
+wm-restack = bspwm
 ;wm-restack = i3
 ; 是否覆盖
 override-redirect = false
@@ -75,7 +75,7 @@ foreground = ${colors.foreground}
 ; 字体设置
 include-file = $HOME/.config/polybar/fonts.ini
 ; 模块位置定义
-modules-left = powermenu sep i3 sep title
+modules-left = powermenu sep i3 bspwm sep title
 modules-center = date
 modules-right = cpu memory filesystem battery wired pulseaudio xbacklight keyboard sep dunst
 
