change polybar bspwm

--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -1,33 +1,80 @@
 [module/bspwm]
 type = internal/bspwm
 
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+pin-workspaces = false
+
+; ws-icon-[0-9]+ = <label>;<icon>
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;﬏
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;ﱘ
+; ws-icon-7 = 8;﬏
+; ws-icon-8 = 9;﬏
+; ws-icon-9 = 10;﬏
+ws-icon-default = 
+
 format = <label-state> <label-mode>
 
-label-focused = 
-label-focused-foreground = ${colors.blue}
-label-focused-padding = 2
+label-dimmed-empty-foreground = #555
 
-label-occupied = 
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+label-focused = %index% %icon%
+label-focused-foreground = ${colors.pink}
+label-focused-underline = ${colors.pink}
+label-focused-padding = 3
+
+label-occupied = %index% %icon%
 label-occupied-foreground = ${colors.foreground}
-label-occupied-padding = 2
+label-occupied-padding = 3
 
-label-urgent = 
-label-urgent-foreground = ${colors.foreground}
-label-urgent-padding = 2
+label-urgent = %index% %icon%
+label-urgent-foreground = ${colors.yellow}
+label-urgent-padding = 3
 
-label-empty = 
-label-empty-foreground = ${colors.foreground}
-label-empty-padding = 2
+label-empty = %index% %icon%
+label-empty-foreground = ${colors.gray}
+label-empty-padding = 3
 
-label-locked = 
+
+label-monocle =  
+label-monocle-padding = 2
+label-monocle-foreground = ${colors.blue}
+label-tiled = ﱖ
+label-tiled-padding = 2
+label-tiled-foreground = ${colors.blue}
+label-fullscreen = 
+label-fullscreen-padding = 2
+label-fullscreen-foreground = ${colors.blue}
+label-floating = 
+label-floating-padding = 2
+label-floating-foreground = ${colors.blue}
+label-pseudotiled = 
+label-pseudotiled-padding = 2
+label-pseudotiled-foreground = ${colors.blue}
+
+label-locked = 
 label-locked-foreground = ${colors.yellow}
 label-locked-padding = 1
-label-sticky = 
+label-sticky = 
 label-sticky-foreground = ${colors.yellow}
 label-sticky-padding = 1
-label-private = 
+label-private = 
 label-private-foreground = ${colors.red}
 label-private-padding = 1
-label-marked = 
+label-marked = 
 label-marked-foreground = ${colors.green}
 label-marked-padding = 1
+
+;label-separator = |
+;label-separator-padding = 2
+;label-separator-foreground = #ffb52a
+
