polybar add network and voice module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -75,9 +75,9 @@ foreground = ${colors.foreground}
 ; 字体设置
 include-file = $HOME/.config/polybar/fonts.ini
 ; 模块位置定义
-modules-left = powermenu sep i3 bspwm sep title
+modules-left = powermenu sep bspwm sep title
 modules-center = date
-modules-right = cpu memory filesystem battery wired pulseaudio xbacklight keyboard sep dunst
+modules-right = network cpu memory filesystem pulseaudio keyboard sep dunst
 
 ; 本地化
 locale = zh_CN.UTF-8
