--- a/.config/polybar/modules/keyboard.ini
+++ b/.config/polybar/modules/keyboard.ini
@@ -20,9 +20,9 @@ format = <label-layout> <label-indicator>
 ; Default: %layout%
 label-layout = "  %icon%"
 ; layout-icon-[0-9]+ = layout;icon
-layout-icon-default = some-icon
-layout-icon-0 = ch;C
-layout-icon-1 = us;A
+layout-icon-default = “”
+layout-icon-0 = cn;中
+layout-icon-1 = us;英
 
 ; 键盘指示器可选值
 ;   %name%
