--- a/.config/fcitx5/config
+++ b/.config/fcitx5/config
@@ -3,11 +3,11 @@
 EnumerateWithTriggerKeys=True
 # 轮换输入法时跳过第一个输入法
 EnumerateSkipFirst=False
+# 向前切换输入分组
+EnumerateGroupForwardKeys=
 
 [Hotkey/TriggerKeys]
 0=Control+Control_L
-1=Zenkaku_Hankaku
-2=Hangul
 
 [Hotkey/AltTriggerKeys]
 0=Shift_L
@@ -17,9 +17,6 @@ EnumerateSkipFirst=False
 
 [Hotkey/EnumerateBackwardKeys]
 0=Control+Shift_R
-
-[Hotkey/EnumerateGroupForwardKeys]
-0=Super+space
 
 [Hotkey/EnumerateGroupBackwardKeys]
 0=Shift+Super+space
@@ -49,7 +46,7 @@ EnumerateSkipFirst=False
 # 默认状态为激活
 ActiveByDefault=False
 # 共享输入状态
-ShareInputState=No
+ShareInputState=Program
 # 在程序中显示预编辑文本
 PreeditEnabledByDefault=True
 # 切换输入法时显示输入法信息
