--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -1,33 +1,34 @@
 [module/network]
 type = internal/network
-interface = ens36
+interface = ens33
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 1.0
+interval = 3.0
 
 udspeed-minwidth = 5
 accumulate-stats = true
 
 format-connected = <ramp-signal> <label-connected>
-label-connected = %ifname% %downspeed:9%
-label-connected-foreground = #eefafafa
-
 format-disconnected = <label-disconnected>
-format-packetloss = <animation-packetloss> <label-connected>
+
+; All labels support the following tokens:
+;   %ifname%    [wireless+wired]
+;   %local_ip%  [wireless+wired]
+;   %local_ip6% [wireless+wired]
+;   %essid%     [wireless]
+;   %signal%    [wireless]
+;   %upspeed%   [wireless+wired]
+;   %downspeed% [wireless+wired]
+;   %linkspeed% [wired]
+
+; Default: %ifname% %local_ip%
+label-connected = "%downspeed:min%"
+lable-connected-prefix = 
+
+
 label-disconnected = not connected
 label-disconnected-foreground = #66ffffff
+
 ; Only applies if <ramp-signal> is used
-ramp-signal-0 = 😱
-ramp-signal-1 = 😠
-ramp-signal-2 = 😒
-ramp-signal-3 = 😊
-ramp-signal-4 = 😃
-ramp-signal-5 = 😈
-; Only applies if <animation-packetloss> is used
-animation-packetloss-0 = ⚠
-animation-packetloss-0-foreground = #ffa64c
-animation-packetloss-1 = 📶
-animation-packetloss-1-foreground = #000000
-; Framerate in milliseconds
-animation-packetloss-framerate = 500
+ramp-signal-0 = 
