--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -3,7 +3,7 @@ type = internal/pulseaudio
 
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 ; If not, uses default sink
-sink = alsa_output.pci-0000_03_00.6.analog-stereo
+sink = alsa_output.pci-0000_02_02.0.analog-stereo
 
 ; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
 ; Default: true
@@ -24,22 +24,24 @@ format-volume = <ramp-volume> <label-volume>
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-prefix = 
-format-muted-prefix-foreground = ${colors.red}
+format-muted-prefix = 
 
 ; Available tokens:
 ;   %percentage% (default)
-label-volume = %percentage%%
+label-volume = %percentage%
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = " Muted"
-label-muted-foreground = ${colors.sep}
+;label-muted = " Muted"
+;label-muted-foreground = ${colors.sep}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-foreground = ${colors.blue}
+ramp-volume-0 = 
+ramp-volume-0-padding-right = 2
+ramp-volume-1 = 
+ramp-volume-1-padding-right = 2
+ramp-volume-2 = 
+ramp-volume-2-padding-right = 2
+;ramp-volume-foreground = ${colors.blue}
 
 ramp-headphones-0 = 
