--- a/.config/fcitx5/conf/classicui.conf
+++ b/.config/fcitx5/conf/classicui.conf
@@ -11,5 +11,5 @@ MenuFont="更纱黑体 Mono SC Nerd 10"
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
 # 主题
-Theme=Arc
+Theme=Material-Color-DeepPurple
 
