--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,7 +49,7 @@ border-bottom-color = ${colors.transparent}
 ; 状态栏左侧和右侧添加间距（空格数）
 ;   padding-{left,right}
 padding-left = 4
-padding-right = 4
+padding-right = 2
 
 ; 每个模块前后的间距（空格数）
 ;   module-margin-{left,right}
@@ -77,7 +77,7 @@ include-file = $HOME/.config/polybar/fonts.ini
 ; 模块位置定义
 modules-left = powermenu sep bspwm sep title
 modules-center = date
-modules-right = network cpu memory filesystem pulseaudio keyboard sep dunst
+modules-right = network cpu memory filesystem pulseaudio keyboard dunst sep
 
 ; 本地化
 locale = zh_CN.UTF-8
@@ -91,7 +91,7 @@ tray-position = right
 tray-padding = 1
 tray-maxsize = 18
 tray-scale = 1.0
-tray-background = ${colors.white}
+;tray-background = ${colors.white}
 ;tray-foreground = ${colors.foreground}
 tray-detached = false
 
