--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -32,7 +32,7 @@ label-volume = %percentage%
 
 ; Available tokens:
 ;   %percentage% (default
-;label-muted = " Muted"
+label-muted = "   Muted"
 ;label-muted-foreground = ${colors.sep}
 
 ; Only applies if <ramp-volume> is used
