update polybar config
Signed-off-by: Jasyo <yaojia0225@gmail.com>

--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -4,20 +4,21 @@ type = internal/bspwm
 enable-click = true
 enable-scroll = true
 reverse-scroll = true
-pin-workspaces = false
+;pin-workspaces = false
+;inline-mode = true
+fuzzy-match = true
 
 ; ws-icon-[0-9]+ = <label>;<icon>
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;﬏
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;ﱘ
-; ws-icon-7 = 8;﬏
-; ws-icon-8 = 9;﬏
-; ws-icon-9 = 10;﬏
-ws-icon-default = 
+ws-icon-0 = ;
+ws-icon-1 = ;
+ws-icon-2 = ;﬏
+ws-icon-3 = ;
+ws-icon-4 = ;
+ws-icon-5 = ;
+ws-icon-6 = ;
+ws-icon-7 = ;
+
+ws-icon-default = 
 
 format = <label-state> <label-mode>
 
@@ -27,54 +28,67 @@ label-dimmed-empty-foreground = #555
 ;   %name%
 ;   %icon%
 ;   %index%
-label-focused = %index% %icon%
-label-focused-foreground = ${colors.pink}
-label-focused-underline = ${colors.pink}
-label-focused-padding = 3
+label-focused = "%icon%"
+;label-focused-foreground = ${colors.pink}
+;label-focused-underline = ${colors.pink}
+label-focused-background = ${colors.blue}
+label-focused-padding = 2
 
-label-occupied = %index% %icon%
+label-occupied = %name%
 label-occupied-foreground = ${colors.foreground}
-label-occupied-padding = 3
+label-occupied-padding = 2
 
-label-urgent = %index% %icon%
+label-urgent = %name%
 label-urgent-foreground = ${colors.yellow}
-label-urgent-padding = 3
+label-urgent-padding = 2
 
-label-empty = %index% %icon%
+label-empty = %name%
 label-empty-foreground = ${colors.gray}
-label-empty-padding = 3
+label-empty-padding = 2
 
 
-label-monocle =  
-label-monocle-padding = 2
-label-monocle-foreground = ${colors.blue}
-label-tiled = ﱖ
-label-tiled-padding = 2
-label-tiled-foreground = ${colors.blue}
-label-fullscreen = 
-label-fullscreen-padding = 2
-label-fullscreen-foreground = ${colors.blue}
-label-floating = 
-label-floating-padding = 2
-label-floating-foreground = ${colors.blue}
-label-pseudotiled = 
-label-pseudotiled-padding = 2
-label-pseudotiled-foreground = ${colors.blue}
+label-monocle = Monocle
+label-monocle-padding = 1
+;label-monocle-foreground = ${colors.blue}
+label-monocle-background = ${colors.blue}
 
-label-locked = 
+label-tiled = Tiled
+label-tiled-padding = 1
+;label-tiled-foreground = ${colors.blue}
+label-tiled-background = ${colors.blue}
+
+label-fullscreen = Full
+label-fullscreen-padding = 1
+;label-fullscreen-foreground = ${colors.blue}
+label-fullscreen-background = ${colors.blue}
+
+label-floating = Floating
+label-floating-padding = 1
+;label-floating-foreground = ${colors.blue}
+label-floating-background = ${colors.blue}
+
+label-pseudotiled = P-Tiled
+label-pseudotiled-padding = 1
+;label-pseudotiled-foreground = ${colors.blue}
+label-pseudotiled-background = ${colors.blue}
+
+
+
+label-locked = 
 label-locked-foreground = ${colors.yellow}
 label-locked-padding = 1
-label-sticky = 
+
+label-sticky = 
 label-sticky-foreground = ${colors.yellow}
 label-sticky-padding = 1
+
 label-private = 
 label-private-foreground = ${colors.red}
 label-private-padding = 1
-label-marked = 
+
+label-marked = 
 label-marked-foreground = ${colors.green}
 label-marked-padding = 1
 
-;label-separator = |
-;label-separator-padding = 2
-;label-separator-foreground = #ffb52a
+
 
