--- a/.config/polybar/modules/filesystem.ini
+++ b/.config/polybar/modules/filesystem.ini
@@ -24,7 +24,7 @@ fixed-values = true
 ;   <bar-used>
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
-format-mounted-prefix = 
+format-mounted-prefix = 
 ;format-mounted-prefix-foreground = ${colors.orange}
 
 ; Available tags:
