--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -6,7 +6,7 @@ interface = ens33
 ; Default: 1
 interval = 3.0
 
-udspeed-minwidth = 5
+;udspeed-minwidth = 4
 accumulate-stats = true
 
 format-connected = <ramp-signal> <label-connected>
@@ -24,11 +24,10 @@ format-disconnected = <label-disconnected>
 
 ; Default: %ifname% %local_ip%
 label-connected = "%downspeed:min%"
-lable-connected-prefix = 
 
 
 label-disconnected = not connected
 label-disconnected-foreground = #66ffffff
 
 ; Only applies if <ramp-signal> is used
-ramp-signal-0 = 
+ramp-signal-0 = 
