--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,7 +16,7 @@ include-directory = $HOME/.config/polybar/modules
 
 [bar/main]
 width = 100%
-height = 40
+height = 28
 
 offset-x = 0%
 offset-y = 0%
@@ -41,20 +41,24 @@ line-size = 4
 ; border-{left,top,right,bottom}-size/color
 ; 高度 + 边框顶部尺寸 + 边框底部尺寸
 ; 宽度 - 右边框尺寸 - 左边框尺寸 
-border-top-size = 10
-border-left-size = 10
-border-right-size = 10
-border-bottom-color = ${colors.transparent}
+border-top-size = 6
+border-top-color = ${colors.background}
+;border-left-size = 6
+;border-left-color = ${colors.background}
+;border-right-size = 6
+;border-right-color = ${colors.background}
+border-bottom-size = 6
+border-bottom-color = ${colors.background}
 
 ; 状态栏左侧和右侧添加间距（空格数）
 ;   padding-{left,right}
-padding-left = 4
-padding-right = 2
+;padding-left = 3
+;padding-right = 3
 
 ; 每个模块前后的间距（空格数）
 ;   module-margin-{left,right}
-module-margin-left = 2
-module-margin-right = 2
+;module-margin-left = 1
+;module-margin-right = 1
 
 ; 每个模块之间的分隔符
 separator =
@@ -88,11 +92,10 @@ locale = zh_CN.UTF-8
 ;   right
 ;   none
 tray-position = right
-tray-padding = 1
+tray-padding = 2
 tray-maxsize = 18
 tray-scale = 1.0
 ;tray-background = ${colors.white}
-;tray-foreground = ${colors.foreground}
 tray-detached = false
 
 ; 设置polybar上可点击指针形状
@@ -101,8 +104,22 @@ tray-detached = false
 ; - pointer ：通常呈手形
 ; - ns-resize : 向上和向下箭头，可用于指示滚动 
 cursor-click = pointer
-;cursor-scroll = ns-resize
+cursor-scroll = ns-resize
 
 [settings]
 ; 收到 XCB_RANDR_SCREEN_CHANGE_NOTIFY 事件后重新加载
 screenchange-reload = true
+
+; Define fallback values used by all module formats
+format-foreground = 
+format-background = 
+format-underline =
+format-overline =
+format-spacing =
+format-padding = 1
+format-margin =
+format-offset =
+
+; Enables pseudo-transparency for the bar
+; If set to true the bar can be transparent without a compositor.
+pseudo-transparency = false
