--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -1,9 +1,14 @@
 ;T1 文本字体
-font-0 = "Sarasa UI SC:style=Bold:size=12;3"
+font-0 = "Sarasa Mono SC:style=Bold:size=12;3"
 ;T2 图标字体
-;font-1 = "Sarasa Mono SC Nerd:style=Bold:size=14;3"
-font-1 = "Iosevka Nerd Font:size=16;3"
-font-2 = "Material Icon:size=16;3"
+font-1 = "Symbols Nerd Font:size=16;3"
+;font-1 = "Font Awesome 5 Brands:size=12;3"
+;font-2 = "Font Awesome 5 Free:size=12;3"
+;font-3 = "forkawesome:size=12;3"
+
+;font-3 = "Iosevka Nerd Font:size=16;3"
+;font-2 = "Material Icon:size=16;3"
+
 
 
 
