--- a/.config/polybar/modules/dunst.ini
+++ b/.config/polybar/modules/dunst.ini
@@ -3,5 +3,5 @@ type = custom/ipc
 initial = 1
 ;format-foreground = ${colors.yellow}
 
-hook-0 = echo "%{A1:dunstctl set-paused true && polybar-msg hook dunst 2:} %{A}" &
-hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:} %{A}" &
+hook-0 = echo "%{A1:dunstctl set-paused true && polybar-msg hook dunst 2:}%{A}" &
+hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:}%{A}" &
