--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -16,7 +16,7 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = ﲭ
 ;format-prefix-foreground = ${colors.blue}
 
 ; Available tokens:
@@ -37,7 +37,7 @@ format-prefix = 
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = "  %mb_used%"
+label = "%percentage_used:3%%|%mb_used%"
 
 ; Only applies if <ramp-used> is used
 ;;ramp-used-0 = ${memory.used0}
