--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -32,16 +32,17 @@ label-volume = %percentage%
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = "   Muted"
+label-muted = " muted"
 ;label-muted-foreground = ${colors.sep}
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
-ramp-volume-0-padding-right = 2
+;ramp-volume-0-padding-right = 2
 ramp-volume-1 = 
-ramp-volume-1-padding-right = 2
-ramp-volume-2 = 
-ramp-volume-2-padding-right = 2
+;ramp-volume-1-padding-right = 2
+ramp-volume-2 = 墳
+;ramp-volume-2-padding-right = 2
+ramp-volume-3 = 
 ;ramp-volume-foreground = ${colors.blue}
 
-ramp-headphones-0 = 
+ramp-headphones-0 = 
