--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -14,9 +14,9 @@ ws-icon-1 = ;
 ws-icon-2 = ;﬏
 ws-icon-3 = ;
 ws-icon-4 = ;
-ws-icon-5 = ;
-ws-icon-6 = ;
-ws-icon-7 = ;
+ws-icon-5 = ;
+;ws-icon-6 = ;
+;ws-icon-7 = ;
 
 ws-icon-default = 
 
@@ -32,19 +32,19 @@ label-focused = "%icon%"
 ;label-focused-foreground = ${colors.pink}
 ;label-focused-underline = ${colors.pink}
 label-focused-background = ${colors.blue}
-label-focused-padding = 2
+label-focused-padding = 1
 
 label-occupied = %name%
 label-occupied-foreground = ${colors.foreground}
-label-occupied-padding = 2
+label-occupied-padding = 1
 
 label-urgent = %name%
 label-urgent-foreground = ${colors.yellow}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 label-empty = %name%
 label-empty-foreground = ${colors.gray}
-label-empty-padding = 2
+label-empty-padding = 1
 
 
 label-monocle = Monocle
