--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -9,7 +9,7 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = "  %H:%M %p"
+time = "  %H:%M %A"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
