--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -37,7 +37,7 @@ format-prefix = ﲭ
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = "%percentage_used:3%%|%mb_used%"
+label = %mb_used%
 
 ; Only applies if <ramp-used> is used
 ;;ramp-used-0 = ${memory.used0}
