--- a/.config/polybar/modules/powermenu.ini
+++ b/.config/polybar/modules/powermenu.ini
@@ -14,16 +14,16 @@ label-separator = ""
 ;label-separator-foreground = ${colors.sep}
 
 menu-0-0 = "  "
-menu-0-0-underline = ${colors.purple}
+menu-0-0-background = ${colors.purple}
 menu-0-0-exec = pkill -kill -u yaojia
 
 menu-0-1 = "  "
-menu-0-1-underline = ${colors.yellow}
+menu-0-1-background = ${colors.yellow}
 menu-0-1-exec = systemctl reboot
 
 
 menu-0-2 = "  "
-menu-0-2-underline = ${colors.pink}
+menu-0-2-background = ${colors.pink}
 menu-0-2-exec = systemctl poweroff
 
 
