update polybar batter

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -79,7 +79,7 @@ foreground = ${colors.foreground}
 ; 字体设置
 include-file = $HOME/.config/polybar/fonts.ini
 ; 模块位置定义
-modules-left = powermenu sep bspwm sep title
+modules-left = powermenu sep bspwm bspstate bspflag sep title
 modules-center = date
 modules-right = network cpu memory filesystem pulseaudio keyboard dunst sep
 
