--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -17,11 +17,9 @@ ws-icon-4 = ;
 ws-icon-5 = ;
 ;ws-icon-6 = ;
 ;ws-icon-7 = ;
-
 ws-icon-default = 
 
-format = <label-state> <label-mode>
-
+format = <label-state> 
 label-dimmed-empty-foreground = #555
 
 ; Available tokens:
@@ -47,48 +45,11 @@ label-empty-foreground = ${colors.gray}
 label-empty-padding = 1
 
 
-label-monocle = Monocle
-label-monocle-padding = 1
-;label-monocle-foreground = ${colors.blue}
-label-monocle-background = ${colors.blue}
-
-label-tiled = Tiled
-label-tiled-padding = 1
-;label-tiled-foreground = ${colors.blue}
-label-tiled-background = ${colors.blue}
-
-label-fullscreen = Full
-label-fullscreen-padding = 1
-;label-fullscreen-foreground = ${colors.blue}
-label-fullscreen-background = ${colors.blue}
-
-label-floating = Floating
-label-floating-padding = 1
-;label-floating-foreground = ${colors.blue}
-label-floating-background = ${colors.blue}
-
-label-pseudotiled = P-Tiled
-label-pseudotiled-padding = 1
-;label-pseudotiled-foreground = ${colors.blue}
-label-pseudotiled-background = ${colors.blue}
 
 
 
-label-locked = 
-label-locked-foreground = ${colors.yellow}
-label-locked-padding = 1
 
-label-sticky = 
-label-sticky-foreground = ${colors.yellow}
-label-sticky-padding = 1
 
-label-private = 
-label-private-foreground = ${colors.red}
-label-private-padding = 1
-
-label-marked = 
-label-marked-foreground = ${colors.green}
-label-marked-padding = 1
 
 
 
